--- a/Lab1_Network_Flows_I.ipynb
+++ b/Lab1_Network_Flows_I.ipynb
@@ -356,11 +356,11 @@
       "cell_type": "code",
       "execution_count": 10,
       "metadata": {
-        "id": "d6n85NMlK9b8",
-        "outputId": "8b96ad66-85a5-43b1-95e8-257bc94f0b7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "d6n85NMlK9b8",
+        "outputId": "8b96ad66-85a5-43b1-95e8-257bc94f0b7d"
       },
       "outputs": [
         {
@@ -379,11 +379,11 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "id": "NGbQ_JpgK9b9",
-        "outputId": "784e7dbe-9358-4129-cc0b-382df4fb1df0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NGbQ_JpgK9b9",
+        "outputId": "784e7dbe-9358-4129-cc0b-382df4fb1df0"
       },
       "outputs": [
         {
@@ -454,11 +454,11 @@
       "cell_type": "code",
       "execution_count": 14,
       "metadata": {
-        "id": "r3XujZuFK9b-",
-        "outputId": "20a8f792-7c73-487f-81fd-606efbd09100",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r3XujZuFK9b-",
+        "outputId": "20a8f792-7c73-487f-81fd-606efbd09100"
       },
       "outputs": [
         {
@@ -495,11 +495,11 @@
       "cell_type": "code",
       "execution_count": 15,
       "metadata": {
-        "id": "nL2MmMt7K9b-",
-        "outputId": "ad6c52b4-4e02-49ae-9dd0-360442a77867",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nL2MmMt7K9b-",
+        "outputId": "ad6c52b4-4e02-49ae-9dd0-360442a77867"
       },
       "outputs": [
         {
@@ -531,11 +531,11 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "v0nCb_aYK9b-",
-        "outputId": "cb3770b1-6494-431c-ad38-678ae9e50b6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "v0nCb_aYK9b-",
+        "outputId": "cb3770b1-6494-431c-ad38-678ae9e50b6e"
       },
       "outputs": [
         {
@@ -623,13 +623,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 25,
       "metadata": {
-        "id": "mphD1sVrK9b_",
-        "outputId": "a5aedaa7-2cfa-4aa8-9b34-0e1a56d42db2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mphD1sVrK9b_",
+        "outputId": "359fb7af-87aa-4a8c-fb96-9bd55b69acec"
       },
       "outputs": [
         {
@@ -645,34 +645,7 @@
             "(3, 2)  has flow  0\n",
             "(2, 5)  has flow  0\n",
             "(1, 3)  has flow  0\n",
-            "Total Cost is  0\n"
-          ]
-        }
-      ],
-      "source": [
-        "G={(1,2),(1,3),(2,3),(2,5),(3,2),(3,4),(4,2),(4,5)}\n",
-        "Initialise(G)\n",
-        "Flows(G)\n",
-        "c[1][2] = 2; c[1][3] = 4; c[2][3] = 1\n",
-        "c[2][5] = 3; c[3][2] = 4; c[3][4] = 2\n",
-        "c[4][2] = 2; c[4][5] = 3;"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {
-        "id": "oQzRUnalK9b_",
-        "outputId": "7da05509-0dea-4f2c-84ee-c067164c2a03",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "Total Cost is  0\n",
             "Incremental Network: {(2, 3), (4, 5), (1, 2), (3, 4), (3, 2), (2, 5), (1, 3), (4, 2)}\n",
             "Paths from source to sink:  {(1, 3, 4, 2, 5), (1, 3, 4, 5), (1, 2, 5), (1, 2, 3, 4, 5), (1, 3, 2, 5)}\n",
             "A best path in Gp is  (1, 3, 4, 2, 5)  of minimum cost  0\n",
@@ -740,11 +713,38 @@
         }
       ],
       "source": [
+        "G={(1,2),(1,3),(2,3),(2,5),(3,2),(3,4),(4,2),(4,5)}\n",
+        "Initialise(G)\n",
+        "Flows(G)\n",
+        "c[1][2] = 2; c[1][3] = 4; c[2][3] = 1\n",
+        "c[2][5] = 3; c[3][2] = 4; c[3][4] = 2\n",
+        "c[4][2] = 2; c[4][5] = 3;\n",
         "Iterate(G)\n",
         "Iterate(G)\n",
         "Iterate(G)\n",
         "Iterate(G)\n",
         "Iterate(G)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {
+        "id": "oQzRUnalK9b_"
+      },
+      "outputs": [],
+      "source": [
+        "#(1,2) is normal\n",
+        "#(2,1) is inverted\n",
+        "#(4,3) is inverted\n",
+        "#(3,1) is inverted\n",
+        "#(5,4) is inverted\n",
+        "#(4,2) is normal\n",
+        "#(2,3) is normal\n",
+        "#(4,5) is normal\n",
+        "#(3,2) is normal\n",
+        "#(5,2) is inverted\n",
+        "#Minimal capacity cut : Across arc (2,5), (2,4), and (3,4)\n"
       ]
     },
     {
