--- a/Lab1_Network_Flows_I.ipynb
+++ b/Lab1_Network_Flows_I.ipynb
@@ -761,21 +761,230 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "SIZmuursK9cA"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SIZmuursK9cA",
+        "outputId": "fe56b3ee-0e63-4f5d-bffd-57622da46b2d"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "All values of c,phi and l initialised to zero\n",
+            "(1, 2)  has flow  0\n",
+            "(2, 1)  has flow  0\n",
+            "(3, 4)  has flow  0\n",
+            "(4, 3)  has flow  0\n",
+            "(3, 1)  has flow  0\n",
+            "(3, 7)  has flow  0\n",
+            "(4, 6)  has flow  0\n",
+            "(6, 4)  has flow  0\n",
+            "(7, 6)  has flow  0\n",
+            "(2, 5)  has flow  0\n",
+            "(1, 3)  has flow  0\n",
+            "(5, 8)  has flow  0\n",
+            "(8, 7)  has flow  0\n",
+            "(4, 2)  has flow  0\n",
+            "(5, 6)  has flow  0\n",
+            "(8, 5)  has flow  0\n",
+            "(7, 8)  has flow  0\n",
+            "Total Cost is  0\n",
+            "Incremental Network: {(1, 2), (2, 1), (3, 4), (4, 3), (3, 1), (3, 7), (4, 6), (6, 4), (7, 6), (2, 5), (1, 3), (5, 8), (8, 7), (4, 2), (5, 6), (8, 5), (7, 8)}\n",
+            "Paths from source to sink:  {(1, 3, 7, 8), (1, 2, 5, 8), (1, 2, 5, 6, 4, 3, 7, 8), (1, 3, 7, 6, 4, 2, 5, 8), (1, 3, 4, 2, 5, 8)}\n",
+            "A best path in Gp is  (1, 3, 7, 8)  of minimum cost  0\n",
+            "The min capacity on this path is epsilon  3\n",
+            "The min cost is  0\n",
+            "(1, 2)  flow =  0\n",
+            "(2, 1)  flow =  0\n",
+            "(3, 4)  flow =  0\n",
+            "(4, 3)  flow =  0\n",
+            "(3, 1)  flow =  0\n",
+            "(3, 7)  flow =  3\n",
+            "(4, 6)  flow =  0\n",
+            "(6, 4)  flow =  0\n",
+            "(7, 6)  flow =  0\n",
+            "(2, 5)  flow =  0\n",
+            "(1, 3)  flow =  3\n",
+            "(5, 8)  flow =  0\n",
+            "(8, 7)  flow =  0\n",
+            "(4, 2)  flow =  0\n",
+            "(5, 6)  flow =  0\n",
+            "(8, 5)  flow =  0\n",
+            "(7, 8)  flow =  3\n",
+            "Incremental Network: {(1, 2), (2, 1), (3, 4), (4, 3), (3, 1), (4, 6), (6, 4), (7, 3), (7, 6), (2, 5), (1, 3), (5, 8), (8, 7), (4, 2), (5, 6), (8, 5), (7, 8)}\n",
+            "Paths from source to sink:  {(1, 2, 5, 8), (1, 3, 4, 2, 5, 8)}\n",
+            "A best path in Gp is  (1, 2, 5, 8)  of minimum cost  0\n",
+            "The min capacity on this path is epsilon  3\n",
+            "The min cost is  0\n",
+            "(1, 2)  flow =  3\n",
+            "(2, 1)  flow =  0\n",
+            "(3, 4)  flow =  0\n",
+            "(4, 3)  flow =  0\n",
+            "(3, 1)  flow =  0\n",
+            "(3, 7)  flow =  3\n",
+            "(4, 6)  flow =  0\n",
+            "(6, 4)  flow =  0\n",
+            "(7, 6)  flow =  0\n",
+            "(2, 5)  flow =  3\n",
+            "(1, 3)  flow =  3\n",
+            "(5, 8)  flow =  3\n",
+            "(8, 7)  flow =  0\n",
+            "(4, 2)  flow =  0\n",
+            "(5, 6)  flow =  0\n",
+            "(8, 5)  flow =  0\n",
+            "(7, 8)  flow =  3\n",
+            "Incremental Network: {(1, 2), (2, 1), (3, 4), (4, 3), (3, 1), (4, 6), (6, 4), (7, 3), (7, 6), (1, 3), (5, 2), (5, 8), (8, 7), (4, 2), (5, 6), (8, 5), (7, 8)}\n",
+            "Paths from source to sink:  set()\n",
+            "Maximal flow found: 6  with minimal cost  0\n",
+            "(1, 2)  flow =  3\n",
+            "(2, 1)  flow =  0\n",
+            "(3, 4)  flow =  0\n",
+            "(4, 3)  flow =  0\n",
+            "(3, 1)  flow =  0\n",
+            "(3, 7)  flow =  3\n",
+            "(4, 6)  flow =  0\n",
+            "(6, 4)  flow =  0\n",
+            "(7, 6)  flow =  0\n",
+            "(2, 5)  flow =  3\n",
+            "(1, 3)  flow =  3\n",
+            "(5, 8)  flow =  3\n",
+            "(8, 7)  flow =  0\n",
+            "(4, 2)  flow =  0\n",
+            "(5, 6)  flow =  0\n",
+            "(8, 5)  flow =  0\n",
+            "(7, 8)  flow =  3\n",
+            "Incremental Network: {(1, 2), (2, 1), (3, 4), (4, 3), (3, 1), (4, 6), (6, 4), (7, 3), (7, 6), (1, 3), (5, 2), (5, 8), (8, 7), (4, 2), (5, 6), (8, 5), (7, 8)}\n",
+            "Paths from source to sink:  set()\n",
+            "Maximal flow found: 6  with minimal cost  0\n",
+            "(1, 2)  flow =  3\n",
+            "(2, 1)  flow =  0\n",
+            "(3, 4)  flow =  0\n",
+            "(4, 3)  flow =  0\n",
+            "(3, 1)  flow =  0\n",
+            "(3, 7)  flow =  3\n",
+            "(4, 6)  flow =  0\n",
+            "(6, 4)  flow =  0\n",
+            "(7, 6)  flow =  0\n",
+            "(2, 5)  flow =  3\n",
+            "(1, 3)  flow =  3\n",
+            "(5, 8)  flow =  3\n",
+            "(8, 7)  flow =  0\n",
+            "(4, 2)  flow =  0\n",
+            "(5, 6)  flow =  0\n",
+            "(8, 5)  flow =  0\n",
+            "(7, 8)  flow =  3\n"
+          ]
+        }
+      ],
+      "source": [
+        "G={(1,2),(1,3),(2,1),(2,5),(3,1),(3,4),(3,7),(4,2),(4,3),(4,6),(5,6),(5,8),(6,4),(7,6),(7,8),(8,5),(8,7)}\n",
+        "Initialise(G)\n",
+        "Flows(G)\n",
+        "c[1][2] = 5; c[1][3] = 4; c[2][1] = 5\n",
+        "c[2][5] = 3; c[3][1] = 4; c[3][4] = 5\n",
+        "c[3][7] = 3; c[4][2] = 4; c[4][3] = 5\n",
+        "c[4][6] = 5; c[5][6] = 2; c[5][8] = 6\n",
+        "c[6][4] = 5; c[7][6] = 4; c[7][8] = 4\n",
+        "c[8][5] = 6; c[8][7] = 4;\n",
+        "Iterate(G)\n",
+        "Iterate(G)\n",
+        "Iterate(G)\n",
+        "Iterate(G)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
-        "id": "Emi2z04TK9cA"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Emi2z04TK9cA",
+        "outputId": "76b28575-b499-4345-d784-9ce54a7ffadc"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "All values of c,phi and l initialised to zero\n",
+            "(2, 4)  has flow  0\n",
+            "(2, 1)  has flow  0\n",
+            "(3, 4)  has flow  0\n",
+            "(3, 1)  has flow  0\n",
+            "(5, 4)  has flow  0\n",
+            "(5, 7)  has flow  0\n",
+            "(8, 6)  has flow  0\n",
+            "(1, 3)  has flow  0\n",
+            "(8, 7)  has flow  0\n",
+            "(6, 8)  has flow  0\n",
+            "(4, 5)  has flow  0\n",
+            "(5, 6)  has flow  0\n",
+            "(7, 2)  has flow  0\n",
+            "(7, 5)  has flow  0\n",
+            "(6, 3)  has flow  0\n",
+            "(7, 8)  has flow  0\n",
+            "Total Cost is  0\n",
+            "Incremental Network: {(2, 4), (2, 1), (3, 4), (3, 1), (8, 7), (5, 4), (6, 8), (5, 7), (4, 5), (5, 6), (8, 6), (7, 2), (7, 5), (6, 3), (1, 3), (7, 8)}\n",
+            "Paths from source to sink:  {(1, 3, 4, 5, 6, 8), (1, 3, 4, 5, 7, 8)}\n",
+            "A best path in Gp is  (1, 3, 4, 5, 6, 8)  of minimum cost  0\n",
+            "The min capacity on this path is epsilon  2\n",
+            "The min cost is  0\n",
+            "(2, 4)  flow =  0\n",
+            "(2, 1)  flow =  0\n",
+            "(3, 4)  flow =  2\n",
+            "(3, 1)  flow =  0\n",
+            "(5, 4)  flow =  0\n",
+            "(5, 7)  flow =  0\n",
+            "(8, 6)  flow =  0\n",
+            "(1, 3)  flow =  2\n",
+            "(8, 7)  flow =  0\n",
+            "(6, 8)  flow =  2\n",
+            "(4, 5)  flow =  2\n",
+            "(5, 6)  flow =  2\n",
+            "(7, 2)  flow =  0\n",
+            "(7, 5)  flow =  0\n",
+            "(6, 3)  flow =  0\n",
+            "(7, 8)  flow =  0\n",
+            "Incremental Network: {(2, 4), (2, 1), (4, 3), (3, 1), (5, 4), (5, 7), (8, 6), (1, 3), (6, 5), (8, 7), (6, 8), (4, 5), (5, 6), (7, 2), (7, 5), (6, 3), (7, 8)}\n",
+            "Paths from source to sink:  set()\n",
+            "Maximal flow found: 2  with minimal cost  0\n",
+            "(2, 4)  flow =  0\n",
+            "(2, 1)  flow =  0\n",
+            "(3, 4)  flow =  2\n",
+            "(3, 1)  flow =  0\n",
+            "(5, 4)  flow =  0\n",
+            "(5, 7)  flow =  0\n",
+            "(8, 6)  flow =  0\n",
+            "(1, 3)  flow =  2\n",
+            "(8, 7)  flow =  0\n",
+            "(6, 8)  flow =  2\n",
+            "(4, 5)  flow =  2\n",
+            "(5, 6)  flow =  2\n",
+            "(7, 2)  flow =  0\n",
+            "(7, 5)  flow =  0\n",
+            "(6, 3)  flow =  0\n",
+            "(7, 8)  flow =  0\n"
+          ]
+        }
+      ],
+      "source": [
+        "G={(8,6),(8,7),(6,8),(6,3),(7,8),(7,5),(7,2),(5,6),(5,7),(5,4),(3,4),(3,1),(4,5),(2,4),(2,1),(1,3),(1,3)}\n",
+        "Initialise(G)\n",
+        "Flows(G)\n",
+        "c[8][6] = 5; c[8][7] = 4; c[6][8] = 5\n",
+        "c[6][3] = 3; c[7][8] = 4; c[7][5] = 5\n",
+        "c[7][2] = 3; c[5][6] = 4; c[5][7] = 5\n",
+        "c[5][4] = 5; c[3][4] = 2; c[3][1] = 6\n",
+        "c[4][5] = 5; c[2][4] = 4; c[2][1] = 4\n",
+        "c[1][3] = 6; c[1][2] = 4;\n",
+        "Iterate(G)\n",
+        "Iterate(G)"
+      ]
     },
     {
       "cell_type": "code",
